feat(auth): Implement static authentication
